--- a/angular.json
+++ b/angular.json
@@ -23,7 +23,11 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "./node_modules/bootstrap/dist/css/bootstrap.css",
+              "./node_modules/@nebular/theme/styles/prebuilt/default.css",
+              "./node_modules/nebular-icons/scss/nebular-icons.scss"
+
             ],
             "scripts": []
           },
